--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+OPTIONS: ^:nil
 #+TITLE: Readings on computational logic, interactive theorem proving and functional programming
-  
+
 This repository is a collection of readings shared on [[https://twitter.com/Jose_A_Alonso][Twitter]] about
 computational logic, interactive theorem proving and functional programming.
 
@@ -37,6 +37,11 @@ its content.
 
 ** Julio 2022
 
+*** 30-Jul-22
++ [[https://xenaproject.wordpress.com/2022/07/29/teaching-formalisation-to-mathematics-undergraduates/][Teaching formalisation to mathematics undergraduates]]. ~ Kevin Buzzard (@XenaProject). #ITP #LeanProver #Math
++ [[https://leanprover-community.github.io/blog/posts/mathlib-changelog/][Introducing mathlib changelog]]. ~ David Chanin. #ITP #LeanProver #MathLib #Math
++ [[https://realpython.com/python-type-checking/][Python type checking (Guide)]]. ~ Geir Arne Hjelle. #Python #Programming
+
 *** 29-Jul-22
 + [[http://philsci-archive.pitt.edu/20979/][What we talk about when we talk about mathematics]]. ~ Jeremy Avigad. #Math #Philosophy
 + [[https://arxiv.org/abs/2103.03930][Logical foundations: Personal perspective]]. ~ Yuri Gurevich. #Logic
@@ -47,7 +52,7 @@ its content.
 + [[http://eptcs.web.cse.unsw.edu.au/paper.cgi?TFPIE2021.6][Engaging, large-scale functional programming education in physical and virtual space]]. ~ Kevin Kappelmann, Jonas Rädle and Lukas Stevens. #Haskell #FunctionalProgramming #Teaching
 + [[https://www21.in.tum.de/teaching/fpv/WS20/assets/slides.pdf][Functional programming and verification]]. ~ Tobias Nipkow. #Haskel #FunctionalProgramming
 + [[https://vadosware.io/post/how-and-why-haskell-is-better/][How and why Haskell is better (than your favorite $LANGUAGE)]]. ~ @vadosware #Haskell #FunctionalProgramming
-+ [[https://decomposition.al/blog/2022/07/20/my-flops-2022-keynote-talk-adventures-in-building-reliable-distributed-systems-with-liquid-haskell/][Adventures in building reliable distributed systems with Liquid Haskell]]. ~ Lindsey Kuper (@lindsey). #Haskell #FunctionalProgramming #LiquidHaskell 
++ [[https://decomposition.al/blog/2022/07/20/my-flops-2022-keynote-talk-adventures-in-building-reliable-distributed-systems-with-liquid-haskell/][Adventures in building reliable distributed systems with Liquid Haskell]]. ~ Lindsey Kuper (@lindsey). #Haskell #FunctionalProgramming #LiquidHaskell
 + [[https://blog.galowicz.de/2022/03/20/unique-heterogeneous-typelists/][Filtering unique items from heterogeneous lists at compile time]]. ~ Jacek Galowicz (@jgalowicz). #Haskell #FunctionalProgramming
 + [[https://sol.sbc.org.br/index.php/wei/article/download/20850/20676][NADIA (Natural DeductIon proof Assistant)]]. ~ Davi Romero de Vasconcelos, Robson Teixeira Paula, Maria Viviane Menezes. #Logic #Teaching
 + [[http://eptcs.web.cse.unsw.edu.au/paper.cgi?TFPIE2021.3][Teaching programming to novices using the codeBoot online environment]]. ~ Marc Feeley and Olivier Melançon. #Programming #Teaching
@@ -57,7 +62,7 @@ its content.
 + [[https://github.com/leanprover-community/mathlib/blob/696542631b3fb81ebe0340e3b63263fd8879e44f/src/computability/ackermann.lean][The Ackermann function isn't primitive recursive function (in Lean)]]. ~ Violeta Hernández Palacios. #ITP #LeanProver
 + [[https://youtu.be/C6vPGBD37BQ][Ordinals (in Lean)]]. ~ Violeta Hernández Palacios. #ITP #LeanProver #Math #SetTheory
 + [[https://www.micahcantor.com/blog/monad-confusion/][Monad confusion and the blurry line between data and computation]]. ~ Micah Cantor (@micah_cantor). #Haskell #FunctionalProgramming
-+ [[https://yairchu.github.io/posts/python-print-in-haskell][Python's print in Haskell]]. ~ Yair Chuchem (@yairchu) #Haskell #FunctionalProgramming 
++ [[https://yairchu.github.io/posts/python-print-in-haskell][Python's print in Haskell]]. ~ Yair Chuchem (@yairchu) #Haskell #FunctionalProgramming
 + [[https://youtu.be/AIYGy0Rguq8][Most common mistakes in Haskell]]. ~ Constantine Ter-Matevosian. #Haskell #FunctionalProgramming
 + [[https://www.tweag.io/blog/2022-07-28-timestats/][Profiling non-CPU time in Haskell]]. ~ Facundo Domínguez. #Haskell #FunctionalProgramming
 + [[https://www.jjj.de/fxt/fxtbook.pdf][Matters computational (Ideas, algorithms, source code)]]. ~ Jörg Arndt. #Algorithms #Programming
@@ -71,7 +76,7 @@ its content.
 + [[https://arxiv.org/abs/2207.09854][Auto-active verification of graph algorithms, written in OCaml]]. ~ Daniel Castanho, Mário Pereira. #OCaml #FunctionalProgramming
 
 *** 25-Jul-22
-+ [[https://karthinks.com/software/latex-input-for-impatient-scholars][LaTeX input for impatient scholars]]. ~ Karthik Chikmagalur. #LaTeX #Emacs #Math 
++ [[https://karthinks.com/software/latex-input-for-impatient-scholars][LaTeX input for impatient scholars]]. ~ Karthik Chikmagalur. #LaTeX #Emacs #Math
 
 *** 24-Jul-22
 + [[https://www.lightbluetouchpaper.org/2022/07/22/formal-cheri/][Formal CHERI: rigorous engineering and design-time proof of full-scale architecture security properties]]. ~ Peter Sewell (@peter_sewell_). #ITP #IsabelleHOL
@@ -125,7 +130,7 @@ its content.
 + [[https://typeset.io/pdf/solving-and-verifying-the-boolean-pythagorean-triples-vv35rinj1q.pdf][Solving and verifying the boolean Pythagorean Triples problem via Cube-and-Conquer]]. ~ Marijn J. H. Heule, Oliver Kullmann, Victor W. Marek. #SATSolvers #Logic #Math
 + [[https://arxiv.org/abs/1909.12582][Towards Coq-verified Esterel semantics and compiling]]. ~ Gérard Berry, Lionel Rieg. #ITP #Coq
 + [[https://iagoleal.com/posts/calculus-symbolic-ode/][The lazy way to solve differential equations]]. ~ Iago Leal de Freitas. #Haskell #FunctionalProgramming #Math
-+ [[https://serokell.io/blog/universal-and-existential-quantification][Universal and existential quantification in Haskell]]. ~ Stepan Prudnikov. #Haskell #FunctionalProgramming 
++ [[https://serokell.io/blog/universal-and-existential-quantification][Universal and existential quantification in Haskell]]. ~ Stepan Prudnikov. #Haskell #FunctionalProgramming
 
 *** 18-Jul-22
 + [[https://arxiv.org/abs/2207.07499][Formalising Szemerédi's regularity lemma and Roth's theorem on arithmetic progressions in Isabelle/HOL]]. ~ Chelsea Edmonds, Angeliki Koutsoukou-Argyraki, Lawrence C. Paulson. #ITP #IsabelleHOL #Math
@@ -170,15 +175,15 @@ its content.
 *** 12-Jul-22
 + [[https://refubium.fu-berlin.de/bitstream/handle/fub188/35426/dissertation_kirchner.pdf][Computer-verified foundations of metaphysics and an ontology of natural numbers in Isabelle/HOL]]. ~ Daniel Kirchner. #ITP #IsabelleHOL
 + [[https://github.com/leanprover-community/mathlib/blob/353634719596e403980214ae6534df84d2c2d113/src/combinatorics/set_family/harris_kleitman.lean][Harris-Kleitman inequality (in Lean)]]. ~ Yaël Dillies. #ITP #LeanProver #Math
-+ [[https://morazanm.github.io/fsm/index.html][FSM: a Domain Specific Language (DSL) designed to construct and manipulate state machines and their grammars]]. #CompSci 
++ [[https://morazanm.github.io/fsm/index.html][FSM: a Domain Specific Language (DSL) designed to construct and manipulate state machines and their grammars]]. #CompSci
 + [[https://arxiv.org/pdf/1412.4878.pdf][Functional automata (Formal languages for computer science students)]]. ~ Marco T. Morazán, Rosario Antunez. #CompSci
-+ [[https://www.eduhk.hk/cte2017/doc/CTE2017%20Proceedings.pd][Integrating computational thinking into discrete mathematics]]. ~ Kwong-cheong Wong.f#page=138 #Math #CompSci #Teaching 
++ [[https://www.eduhk.hk/cte2017/doc/CTE2017%20Proceedings.pd][Integrating computational thinking into discrete mathematics]]. ~ Kwong-cheong Wong.f#page=138 #Math #CompSci #Teaching
 + [[https://wiki.tfpie.science.ru.nl/images/7/75/Farrugia-Roberts_and_Sondergaard_TFPIE_2022_extended_abstract.pdf][Teaching simple constructive proofs with Haskell programs]]. ~ Matthew Farrugia-Roberts, Harald Søndergaard. #Haskell #FunctionalProgramming
 + [[https://www.infedu.vu.lt/journal/INFEDU/article/420/file/pdf][A survey on teaching and learning recursive programming]]. ~ Christian Rinderknecht. #CompSci #Teaching
-+ [[https://arxiv.org/abs/2207.00852][On structuring functional programs with monoidal profunctors]]. ~ Alexandre Garcia de Oliveira, Mauro Jaskelioff, Ana Cristina Vieira de Melo. #Haskell #FunctionalProgramming #CategoryTheory 
++ [[https://arxiv.org/abs/2207.00852][On structuring functional programs with monoidal profunctors]]. ~ Alexandre Garcia de Oliveira, Mauro Jaskelioff, Ana Cristina Vieira de Melo. #Haskell #FunctionalProgramming #CategoryTheory
 + [[https://www4.di.uminho.pt/~jno/ps/wadt22sl.pdf][Why adjunctions matter]]. ~ J.N. Oliveira. #CompSci #Math
 + [[https://culturacientifica.com/2018/12/05/el-teorema-de-ducci/][El teorema de Ducci]]. ~ Marta Macho Stadler (@MartaMachoS). #Matemáticas
-  
+
 *** 11-Jul-22
 + [[http://outlace.com/Lean_part_2.html][Learning Lean (Part 2)]]. ~ Brandon Brown. #ITP #LeanProver
 + [[https://www.isa-afp.org/entries/Weighted_Arithmetic_Geometric_Mean.html][Pólya’s proof of the weighted arithmetic–geometric mean inequality]]. ~ Manuel Eberl. #ITP #IsabelleHOL #Math
@@ -186,7 +191,7 @@ its content.
 + [[https://felixspringer.xyz/homepage/blog/singletonsInHaskell][Singletons in Haskell]]. ~ Felix Springer. #ITP #Haskell #FunctionalProgramming
 + [[https://richarde.dev/papers/2012/singletons/paper.pdf][Dependently typed programming with singletons]]. ~ Richard A. Eisenberg, Stephanie Weirich. #Haskell #FunctionalProgramming
 + [[https://comentarista.emol.com/2323095/22523269/Maria-Isabel-Cortez.html][Conjetura de Van der Waerden: Cómo las matemáticas se cocinan a fuego lento]]. ~ María Isabel Cortez. #Matemáticas
-+ [[https://www.nature.com/articles/d41586-022-01878-7][How to find, read and organize papers]]. ~ Maya Gosztyla. #Research  
++ [[https://www.nature.com/articles/d41586-022-01878-7][How to find, read and organize papers]]. ~ Maya Gosztyla. #Research
 
 *** 10-Jul-22
 + [[https://github.com/leanprover-community/mathlib/blob/8a38a697305292b37a61650e2c3bd3502d98c805/src/combinatorics/simple_graph/hasse.lean][The Hasse diagram as a graph]]. ~ Yaël Dillies. #ITP #LeanProver #Math
@@ -234,14 +239,14 @@ its content.
 + [[https://www.slideshare.net/pjschwarz/sum-and-product-types-the-fruit-salad-fruit-snack-example-from-f-to-haskell-scala-and-java][Sum and product types (The fruit salad & fruit snack example (from F# to Haskell, Scala and Java))]]. ~ Philip Schwarz (@philip_schwarz). #Haskell #FunctionalProgramming #Scala #Fsharp #Java
 + [[http://hakank.org/common_cp_models/][Common constraint programming problems]]. ~ Hakan Kjellerstrand (@hakank). #CLP #Prolog #LogicProgramming
 + [[https://www.genbeta.com/actualidad/esta-nueva-ia-google-capaz-resolver-problema-matematico-paso-a-paso-asi-minerva][Esta nueva IA de Google es capaz de resolver un problema matemático paso a paso: así es Minerva]]. ~ José Alberto Lizana (@Josealberto1813). #IA #Matemáticas
-+ [[https://ai.googleblog.com/2022/06/minerva-solving-quantitative-reasoning.html][Minerva: Solving quantitative reasoning problems with language models]]. ~ Ethan Dyer, Guy Gur-Ari. #AI #Math 
++ [[https://ai.googleblog.com/2022/06/minerva-solving-quantitative-reasoning.html][Minerva: Solving quantitative reasoning problems with language models]]. ~ Ethan Dyer, Guy Gur-Ari. #AI #Math
 + [[https://arxiv.org/abs/2206.14858][Solving quantitative reasoning problems with language models]]. ~ Aitor Lewkowycz et als. #AI #Math
 + [[https://minerva-demo.github.io][Minerva sample explorer]]. #AI #Math
 
 *** 03-Jul-22
 + [[https://youtu.be/Ku9-hmf1Qkw][Namespaced De Bruijn indices (Video)]]. ~ Gabriella Gonzalez (@GabriellaG439). #Haskell #FunctionalProgramming
 + [[https://www.haskellforall.com/2021/08/namespaced-de-bruijn-indices.html][Namespaced De Bruijn indices]]. ~ Gabriella Gonzalez (@GabriellaG439). #Haskell #FunctionalProgramming
-  
+
 *** 02-Jul-22
 + [[https://www.glc.us.es/~jalonso/vestigium/pfh-la-semana-en-exercitium-1-de-julio-de-2022/][#PFH: La semana en Exercitium (1 de julio de 2022)]]. #Haskell #ProgramaciónFuncional #Matemáticas
 + [[https://www.cs.princeton.edu/~appel/papers/FECVerification.pdf][Verified erasure correction in Coq with MathComp and VST]]. ~ Joshua M. Cohen, Qinshi Wang, Andrew W. Appel. #ITP #Coq
@@ -255,7 +260,7 @@ its content.
 + [[https://mmhaskell.com/blog/2022/6/27/catching-before-production-assert-statements-in-haskell][Catching before production: Assert statements in Haskell]]. ~ James Bowen (@james_OWA). #Haskell #FunctionalProgramming
 + [[https://www.quora.com/Which-is-the-best-functional-programming-language-1 ][Which is the best functional programming language?]] ~ Aaron Christianson. #FunctionalProgramming
 + [[https://serokell.io/blog/10-reasons-to-use-haskell][10 reasons to use Haskell]]. ~ Vladislav Zavialov. #Haskell #FunctionalProgramming
-  
+
 ** June 2022
 
 *** 30-Jun-22
@@ -277,7 +282,7 @@ its content.
 + [[https://www.research-collection.ethz.ch/bitstream/handle/20.500.11850/553221/thesis.pdf?sequence=1][Efficient, expressive, and verified temporal query evaluation]]. ~ Martin Raszyk. #PhD_Thesis #ITP #IsabelleHOL
 + [[https://arxiv.org/abs/2206.08714][Relaxing safety for metric first-order temporal logic via dynamic free variables ~ Jonathan Julian Huerta y Munive]]. #ITP #IsabelleHOL
 + [[https://www.cs.ox.ac.uk/people/hugo.paquet/lazyppl.pdf][LazyPPL: Monads and laziness for Bayesian modelling]]. ~ Swaraj Dash, Younesse Kaddar, Hugo Paquet, Sam Staton. #Haskell #FunctionalProgramming
-  
+
 *** 25-Jun-22
 + [[https://www.isa-afp.org/entries/IsaNet.html][IsaNet: Formalization of a verification framework for secure data plane protocols]]. ~ Tobias Klenze, Christoph Sprenger. #ITP #IsabelleHOL
 + [[https://mat.unb.br/~ayala/FormEuclideanDomains.pdf][Formalizing factorization on euclidean domains and abstract euclidean algorithms]]. ~ Thaynara Arielly de Lima, Andréia Borges Avelar, André Luiz Galdino, Mauricio Ayala-Rincón. #ITP #PVS #Math
@@ -290,7 +295,7 @@ its content.
 
 *** 21-Jun-22
 + [[https://zulip-uploads.s3.amazonaws.com/3121/pCswxBQoZGDwat6pjKL3gMCV/talk_schemes.pdf?AWSAccessKeyId=AKIAIEVMBCAT2WD3M5KQ&Signature=AX5jPfMYqVk%2BVFn879vHTETpioU%3D&Expires=1655824635][How to do maths without dependent types]]. ~ Anthony Bordg, jww Larry Paulson, Wenda Li. #ITP #IsabelleHOL #Math
-+ [[https://codeberg.org/martianh/lingva.el][lingva: Access Google Translate via lingva]]. #Emacs 
++ [[https://codeberg.org/martianh/lingva.el][lingva: Access Google Translate via lingva]]. #Emacs
 
 *** 20-Jun-22
 + [[https://idus.us.es/bitstream/handle/11441/134391/1/Mar%C3%ADa%20Dolores%20Mateo%20Ceballos.pdf?sequence=1][Lógica computacional desde el punto de vista de la programación funcional: eliminación de cuantificadores]]. ~ María Dolores Mateo Ceballos. #TFG #LógicaComputacional #OCaml #ProgramaciónFuncional
@@ -334,7 +339,7 @@ its content.
 *** 13-Jun-22
 + [[https://rjlipton.wpcomstaging.com/2022/06/13/sorting-and-proving/][Sorting and proving]]. ~ R.J. Lipton & K.W. Regan. #Algorithms
 + [[https://www.michaelpj.com/blog/2022/06/12/lenses-for-tree-traversals-redux.html][Lenses for Tree Traversals Redux]]. ~ Michael Peyton Jones (@mpeytonjones). #Haskell #FunctionalProgramming
-  
+
 *** 12-Jun-22
 + [[https://www.ps.uni-saarland.de/Publications/documents/HostertEtAl_2022_Undecidability.pdf][Undecidability of dyadic first-order logic in Coq]]. ~ Johannes Hostert, Andrej Dudenhefner, Dominik Kirst. #ITP #Coq #Logic
 + [[https://www.ps.uni-saarland.de/~kirst/downloads/TYPES_2022_paper_16.pdf][Strong, synthetic, and computational proofs of Gödel’s first incompleteness theorem]]. ~ Benjamin Peters, Dominik Kirst. #ITP #Coq #Logic #Math
@@ -354,7 +359,7 @@ its content.
 + [[https://www.researchgate.net/publication/361149832_A_Comprehensive_Framework_for_Saturation_Theorem_Proving][A comprehensive framework for saturation theorem proving]]. ~ Uwe Waldmann, Sophie Tourret, Simon Robillard, Jasmin Christian Blanchette. #ITP #IsabelleHOL
 + [[https://www.researchgate.net/publication/360907950_Concept_learning_consistency_under_three-way_decision_paradigm][Concept learning consistency under three-way decision paradigm]]. ~ Gonzalo A. Aranda-Corral, Joaquín Borrego-Díaz, Juan Galán-Páez. #MachineLearning #FormalConceptAnalysis
 + [[https://swi-prolog.discourse.group/t/forall-2-foreach-2-double-negation-relational-division-and-sql/5458][Forall/2, foreach/2, double negation, relational division and SQL]]. #Prolog #LogicProgramming #SQL
-  
+
 *** 08-Jun-22
 + [[https://lawrencecpaulson.github.io/2022/06/08/baby-descriptions.html][Dealing with descriptions in Isabelle/HOL: least, greatest, whatever]]. ~ Lawrence C. Paulson (@LawrPaulson). #ITP #IsabelleHOL
 + [[https://siddhartha-gadgil.github.io/automating-mathematics/posts/formalizing-gardam-disproof-kaplansky-conjecture/][Formalizing Gardam's disproof of Kaplansky's Unit Conjecture]]. ~ Siddhartha Gadgil (@SidGadgil). #ITP #LeanProver #Math
@@ -368,7 +373,7 @@ its content.
 + [[https://arxiv.org/abs/2206.02169][Formally verified solution methods for infinite-horizon Markov decision processes]]. ~ Maximilian Schäfeller, Mohammad Abdulaziz. #ITP #IsabelleHOL #Math
 + [[https://www.isa-afp.org/browser_info/current/AFP/DPRM_Theorem/document.pdf][Diophantine equations and the DPRM theorem]]. ~ Jonas Bayer, Marco David, Benedikt Stock, Abhik Pal, Yuri Matiyasevich, Dierk Schleicher. #ITP #IsabelleHOL #Math
 + [[https://nikolai-kosmatov.eu/publications/blatter_kpl_ifm_2022.pdf][Certified verification of relational properties]]. ~ Lionel Blatter et als. #ITP #Coq
-+ [[https://mmhaskell.com/blog/2022/6/6/catching-what-weve-thrown][Catching what we’ve thrown]]. ~ James Bowen (@james_OWA). #Haskell #FunctionalProgramming 
++ [[https://mmhaskell.com/blog/2022/6/6/catching-what-weve-thrown][Catching what we’ve thrown]]. ~ James Bowen (@james_OWA). #Haskell #FunctionalProgramming
 + [[https://serokell.io/blog/haskell-in-production-haskoin][Haskell in production: Haskoin]]. #Haskell #FunctionalProgramming
 + [[https://youtu.be/ZDOBpEuvfVE][Introducción a Emacs (para novatos)]]. ~ Dario Rodriguez. #Emacs
 
@@ -412,7 +417,7 @@ its content.
 + [[https://www.haskellforall.com/2022/05/generate-web-forms-from-pure-functions.html][Generate web forms from pure functions]]. ~ Gabriella Gonzalez (@GabriellaG439). #Haskell #FunctionalProgramming
 + [[https://vishpat.github.io/lisp-rs-wasm/][Lisp interpreter in a browser using WASM]]. ~ Vishal Patil. #CommonLisp #RustLang
 
-   
+
 ** May 2022
 
 *** 31-May-22
@@ -420,7 +425,7 @@ its content.
 + [[https://bor0.wordpress.com/2022/05/30/recursion-from-first-principles/][Recursion from first principles]]. ~ Boro Sitnikovski  (@BSitnikovski). #Logic #Math #CompSci
 + [[https://frasertweedale.github.io/blog-fp/posts/2022-05-31-ghc-test-suite.html][Writing tests for GHC]]. ~ Fraser Tweedale (@hackuador). #Haskell #FunctionalProgramming
 + [[https://youtu.be/M0a4-tfuiao][Haskell: Advantages, community and ecosystem]]. ~ Andres Löh. #Haskell #FunctionalProgramming
-  
+
 *** 30-May-22
 + [[https://www.isa-afp.org/entries/Pluennecke_Ruzsa_Inequality.html][The Plünnecke-Ruzsa inequality]]. ~ Angeliki Koutsoukou-Argyraki, Lawrence C. Paulson. #ITP #IsabelleHOL #Math
 + [[https://arxiv.org/abs/2205.14071][A mechanically assisted examination of vacuity and question begging in Anselm's ontological argument]]. ~ John Rushby. #ITP #PVS
@@ -428,7 +433,7 @@ its content.
 
 *** 28-May-22
 + [[https://www.isa-afp.org/entries/Package_logic.html][Formalization of a framework for the sound automation of magic wands]]. ~ Thibault Dardinier. #ITP #IsabelleHOL #Logic
-+ [[https://arxiv.org/abs/2205.11491][HyperTree proof search for neural theorem proving]]. ~ Guillaume Lample, Marie-Anne Lachaux, Thibaut Lavril, Xavier Martinet, Amaury Hayat, Gabriel Ebner, Aurélien Rodriguez, Timothée Lacroix. #ITP #LeanProver #Metamath #MachineLearning 
++ [[https://arxiv.org/abs/2205.11491][HyperTree proof search for neural theorem proving]]. ~ Guillaume Lample, Marie-Anne Lachaux, Thibaut Lavril, Xavier Martinet, Amaury Hayat, Gabriel Ebner, Aurélien Rodriguez, Timothée Lacroix. #ITP #LeanProver #Metamath #MachineLearning
 + [[https://blog.poisson.chat/posts/2022-05-27-formalizing-finite-sets.html][Formalizing finite sets]]. ~ Li-yao Xia (@lysxia). #ITP #Coq #Math
 + [[https://arxiv.org/abs/2205.11709v1][Hardware/software co-assurance using the Rust programming language and ACL2]]. ~ David Hardin. #ITP #ACL2 #Rust
 
